--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_30,code=sm_30)
 #list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_52,code=sm_52)
 #list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_52,code=compute_52)
 #list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_60,code=sm_60)
-#list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_61,code=sm_61)
+list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_61,code=sm_61)
 #list(APPEND CUDA_NVCC_FLAGS -gencode=arch=compute_62,code=sm_62)
 
 cuda_add_executable(basic basic.cu)
