--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,7 @@
 *.pch
 
 # Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
+*.so *.dylib *.dll
 # Fortran module files
 *.mod
 *.smod
@@ -32,4 +29,4 @@
 *.app
 
 # Build Directories
-/build
+/*build*/
